libs/east-c/packages/east-c/include/east/serialization.h


typedef struct Beast2Pages Beast2Pages;
EastValue *east_beast2_open_paged_external(uint8_t *data, size_t len, EastType *type, bool frozen,
                                           void (*release)(void *ctx, uint8_t *data, size_t len),
                                           void *ctx);