libs/east-c/packages/east-c/include/east/values.h

typedef enum {
    EAST_VAL_NULL,
    EAST_VAL_BOOLEAN,
    EAST_VAL_INTEGER,
    EAST_VAL_FLOAT,
    EAST_VAL_STRING,
    EAST_VAL_DATETIME,
    EAST_VAL_BLOB,
    EAST_VAL_ARRAY,
    EAST_VAL_SET,
    EAST_VAL_DICT,
    EAST_VAL_STRUCT,
    EAST_VAL_VARIANT,
    EAST_VAL_REF,
    EAST_VAL_VECTOR,
    EAST_VAL_MATRIX,
    EAST_VAL_FUNCTION,
    EAST_VAL_PAGED,
} EastValueKind;
typedef struct EastValue EastValue;
typedef struct EastCompiledFn EastCompiledFn;
typedef struct Beast2Pages Beast2Pages;
struct btree;
struct EastValue {
    EastValueKind kind;
    int ref_count;
    union {
        bool boolean;
        int64_t integer;
        double float64;
        struct {
            char *data;
            size_t len;
            char inline_data[EAST_STRING_INLINE_CAP + 1];
        } string;
        int64_t datetime; 
        struct {
            uint8_t *data;
            size_t len;
        } blob;
        struct {
            EastValue **items;
            size_t len;
            size_t cap;
            EastType *elem_type;
            bool frozen; 
        } array;
        struct {
            struct btree *tree; 
            EastValue **items;  
            size_t len;         
            size_t cap;         
            bool dirty;         
            bool frozen;        
            EastType *elem_type;
        } set;
        struct {
            struct btree *tree; 
            EastValue **keys;   
            EastValue **values; 
            size_t len;         
            size_t cap;         
            bool dirty;         
            bool frozen;        
            EastType *key_type;
            EastType *val_type;
        } dict;
        struct {
            char **field_names;
            EastValue **field_values;
            size_t num_fields;
            EastType *type;
        } struct_;
        struct {
            EastValue *value;
            EastType *type;
            size_t case_idx;      
            const char *case_tag; 
        } variant;
        struct {
            EastValue *value;
            bool frozen; 
        } ref;
        struct {
            void *data; 
            size_t len;
            EastType *elem_type;
            bool frozen; 
        } vector;
        struct {
            void *data; 
            size_t rows;
            size_t cols;
            EastType *elem_type;
            bool frozen; 
        } matrix;
        struct {
            EastCompiledFn *compiled;
        } function;
        struct {
            Beast2Pages *pages; 
            uint8_t *data;      
            size_t len;
            EastValue *hydrated; 
            EastValue *owner;
            void (*release)(void *ctx, uint8_t *data, size_t len);
            void *release_ctx;
            bool frozen;    
            bool owns_data; 
        } paged;
    } data;
    struct EastValue *gc_next;
    struct EastValue *gc_prev;
    int gc_refs;     
    bool gc_tracked; 
    uint8_t gc_gen;  
    int iter_lock;   
};
extern EAST_DATA EastValue east_null_value;
EastValue *east_null(void);
EastValue *east_boolean(bool val);
EastValue *east_integer(int64_t val);
EastValue *east_float(double val);
EastValue *east_string(const char *str);
EastValue *east_string_len(const char *str, size_t len);
EastValue *east_datetime(int64_t millis);
EastValue *east_blob(const uint8_t *data, size_t len);
EastValue *east_array_new(EastType *elem_type);
void east_array_push(EastValue *arr, EastValue *val);
EastValue *east_array_get(EastValue *arr, size_t index);
size_t east_array_len(EastValue *arr);
EastValue *east_set_new(EastType *elem_type);
void east_set_insert(EastValue *set, EastValue *val);
bool east_set_has(EastValue *set, EastValue *val);
bool east_set_delete(EastValue *set, EastValue *val);
void east_set_clear(EastValue *set);
size_t east_set_len(EastValue *set);
void east_set_visit(EastValue *set, void (*visit)(EastValue *elem, void *ctx), void *ctx);
EastValue *east_dict_new(EastType *key_type, EastType *val_type);
void east_dict_set(EastValue *dict, EastValue *key, EastValue *val);
EastValue *east_dict_get(EastValue *dict, EastValue *key);
bool east_dict_has(EastValue *dict, EastValue *key);
bool east_dict_delete(EastValue *dict, EastValue *key);
EastValue *east_dict_pop(EastValue *dict, EastValue *key);
void east_dict_clear(EastValue *dict);
size_t east_dict_len(EastValue *dict);
void east_dict_visit(EastValue *dict, void (*visit)(EastValue *child, void *ctx), void *ctx);
static inline EastValue *east_set_at(EastValue *set, size_t i)
{
    east_set_sync(set);
    return set->data.set.items[i];
}
static inline EastValue *east_dict_key_at(EastValue *dict, size_t i)
{
    east_dict_sync(dict);
    return dict->data.dict.keys[i];
}
static inline EastValue *east_dict_val_at(EastValue *dict, size_t i)
{
    east_dict_sync(dict);
    return dict->data.dict.values[i];
}
EastValue *east_struct_new(const char **names, EastValue **values, size_t count, EastType *type);
EastValue *east_struct_get_field(EastValue *s, const char *name);
static inline const char *east_struct_field_name(const EastValue *s, size_t idx)
{
    if (!s || s->kind != EAST_VAL_STRUCT || idx >= s->data.struct_.num_fields) return NULL;
    if (s->data.struct_.field_names) return s->data.struct_.field_names[idx];
    const EastType *t = s->data.struct_.type;
    while (t && t->kind == EAST_TYPE_RECURSIVE)
        t = t->data.recursive.node;
    return t->data.struct_.fields[idx].name;
}
static inline EastValue *east_struct_get_field_idx(EastValue *s, size_t idx)
{
    return (s && s->kind == EAST_VAL_STRUCT && idx < s->data.struct_.num_fields)
               ? s->data.struct_.field_values[idx]
               : NULL;
}
EastValue *east_variant_new(const char *case_name, EastValue *value, EastType *type);
EastValue *east_ref_new(EastValue *value);
EastValue *east_ref_get(EastValue *ref);
void east_ref_set(EastValue *ref, EastValue *value);
EastValue *east_paged_new(Beast2Pages *pages, uint8_t *data, size_t len, bool owns_data,
                          EastValue *owner, void (*release)(void *ctx, uint8_t *data, size_t len),
                          void *release_ctx);
void east_compiled_fn_free(EastCompiledFn *fn);