libs/east-py/packages/east-py/east/_eastc.pxd

# cython: language_level=3
#
# Copyright (c) 2025 Elara AI Pty Ltd
# Licensed under the Business Source License 1.1. See LICENSE.md for details.
#
"""Cython declarations for east-c's public C API.

Declares struct layouts with union members so .pyx files can access
fields directly (e.g. val.data.string.data).

Declaration order matters — types are ordered so that each struct only
references types already declared above it.  PlatformRegistry is kept
opaque here because PlatformFn depends on EvalResult which depends on
EastValue; the pre_call hook field is accessed via inline C in the
platform bridge module.
"""

from libc.stddef cimport size_t
from libc.stdint cimport int32_t, int64_t, uint8_t, uint32_t, uint64_t


# ─── stdbool.h ────────────────────────────────────────────────
# Cython renders `bint` as C `int`. That is right for a bool passed or
# returned BY VALUE (the C compiler converts), but wrong for a `bool *`
# out-parameter: east-c writes one byte through the pointer while the caller
# reads four. Declare such parameters with `cbool`, which emits the C
# spelling `bool` and so matches the header exactly.

cdef extern from "stdbool.h":
    ctypedef bint cbool "bool"


# ─── types.h ──────────────────────────────────────────────────────────────

cdef extern from "east/types.h":

    ctypedef enum EastTypeKind:
        EAST_TYPE_NEVER
        EAST_TYPE_NULL
        EAST_TYPE_BOOLEAN
        EAST_TYPE_INTEGER
        EAST_TYPE_FLOAT
        EAST_TYPE_STRING
        EAST_TYPE_DATETIME
        EAST_TYPE_BLOB
        EAST_TYPE_ARRAY
        EAST_TYPE_SET
        EAST_TYPE_DICT
        EAST_TYPE_STRUCT
        EAST_TYPE_VARIANT
        EAST_TYPE_REF
        EAST_TYPE_VECTOR
        EAST_TYPE_MATRIX
        EAST_TYPE_FUNCTION
        EAST_TYPE_ASYNC_FUNCTION
        EAST_TYPE_RECURSIVE

    ctypedef struct EastTypeField:
        char *name
        EastType *type

    # Nested structs for the union
    ctypedef struct _EastTypeDictData:
        EastType *key
        EastType *value

    ctypedef struct _EastTypeStructData:
        EastTypeField *fields
        size_t num_fields

    ctypedef struct _EastTypeVariantData:
        EastTypeField *cases
        size_t num_cases

    ctypedef struct _EastTypeFunctionData:
        EastType **inputs
        size_t num_inputs
        EastType *output

    ctypedef struct _EastTypeRecursiveData:
        EastType *node

    ctypedef union _EastTypeData:
        # Array, Set, Ref, Vector, Matrix
        EastType *element
        # Dict
        _EastTypeDictData dict
        # Struct
        _EastTypeStructData struct_  "struct_"
        # Variant
        _EastTypeVariantData variant
        # Function, AsyncFunction
        _EastTypeFunctionData function
        # Recursive
        _EastTypeRecursiveData recursive

    ctypedef struct EastType:
        EastTypeKind kind
        int ref_count
        _EastTypeData data

    # Primitive type singletons
    EastType east_never_type
    EastType east_null_type
    EastType east_boolean_type
    EastType east_integer_type
    EastType east_float_type
    EastType east_string_type
    EastType east_datetime_type
    EastType east_blob_type

    # Constructors (return interned, arena-immortal types; retain/release are no-ops)
    EastType *east_array_type(EastType *elem)
    EastType *east_set_type(EastType *elem)
    EastType *east_dict_type(EastType *key, EastType *val)
    EastType *east_struct_type(const char **names, EastType **types, size_t count)
    EastType *east_variant_type(const char **names, EastType **types, size_t count)
    EastType *east_ref_type(EastType *inner)
    EastType *east_vector_type(EastType *elem)
    EastType *east_matrix_type(EastType *elem)
    EastType *east_function_type(EastType **inputs, size_t num_inputs, EastType *output)
    EastType *east_async_function_type(EastType **inputs, size_t num_inputs, EastType *output)

    # Recursive type
    EastType *east_recursive_type_new()
    void east_recursive_type_set(EastType *rec, EastType *node)
    EastType *east_recursive_type_intern(EastType *rec)

    # Ref counting
    void east_type_retain(EastType *t)
    void east_type_release(EastType *t)

    # Comparison
    bint east_type_equal(EastType *a, EastType *b)


# ─── ir.h ────────────────────────────────────────────────────────────────

cdef extern from "east/ir.h":

    ctypedef struct EastLocation:
        char *filename
        int64_t line
        int64_t column

    ctypedef struct IRNode:
        int ref_count
        EastType *type
        EastLocation *locations
        size_t num_locations

    void ir_node_retain(IRNode *node)
    void ir_node_release(IRNode *node)


# ─── values.h ─────────────────────────────────────────────────────────────
# PlatformRegistry and BuiltinRegistry are kept opaque — their internal
# layout is not needed here.  EastCompiledFn uses them only as pointers.

cdef extern from "east/values.h":

    ctypedef enum EastValueKind:
        EAST_VAL_NULL
        EAST_VAL_BOOLEAN
        EAST_VAL_INTEGER
        EAST_VAL_FLOAT
        EAST_VAL_STRING
        EAST_VAL_DATETIME
        EAST_VAL_BLOB
        EAST_VAL_ARRAY
        EAST_VAL_SET
        EAST_VAL_DICT
        EAST_VAL_STRUCT
        EAST_VAL_VARIANT
        EAST_VAL_REF
        EAST_VAL_VECTOR
        EAST_VAL_MATRIX
        EAST_VAL_FUNCTION
        EAST_VAL_PAGED

    ctypedef struct Environment:
        pass

    ctypedef struct BuiltinRegistry:
        pass

    ctypedef struct PlatformRegistry:
        pass

    # Forward-declared in values.h; the full API lives in serialization.h.
    ctypedef struct Beast2Pages:
        pass

    # Reference-counted (east_source_map_new/retain/release, type_of_type.h):
    # a compiled function holds one reference to the map it resolves loc_ids
    # against, released by east_compiled_fn_free.
    ctypedef struct EastSourceMap:
        EastLocation **stacks
        size_t *stack_counts
        size_t num_stacks
        int ref_count

    ctypedef struct EastCompiledFn:
        IRNode *ir
        Environment *captures
        char **param_names
        size_t num_params
        PlatformRegistry *platform
        BuiltinRegistry *builtins
        EastValue *source_ir
        EastType *fn_type
        EastSourceMap *source_map
        void *invoke_userdata

    # Nested structs for the value union
    ctypedef struct _EastValueStringData:
        # `data` points into the node itself for strings up to the inline cap
        # (that trailing buffer is not declared here — nothing reads it from
        # Python, and cdef extern binds by name rather than by layout).
        char *data
        size_t len

    ctypedef struct _EastValueBlobData:
        uint8_t *data
        size_t len

    ctypedef struct _EastValueArrayData:
        EastValue **items
        size_t len
        size_t cap
        EastType *elem_type

    ctypedef struct _EastValueSetData:
        EastValue **items
        size_t len
        size_t cap
        EastType *elem_type

    ctypedef struct _EastValueDictData:
        EastValue **keys
        EastValue **values
        size_t len
        size_t cap
        EastType *key_type
        EastType *val_type

    ctypedef struct _EastValueStructData:
        char **field_names
        EastValue **field_values
        size_t num_fields
        EastType *type

    ctypedef struct _EastValueVariantData:
        EastValue *value
        EastType *type
        size_t case_idx
        const char *case_tag

    ctypedef struct _EastValueRefData:
        EastValue *value

    ctypedef struct _EastValueVectorData:
        void *data
        size_t len
        EastType *elem_type

    ctypedef struct _EastValueMatrixData:
        void *data
        size_t rows
        size_t cols
        EastType *elem_type

    ctypedef struct _EastValueFunctionData:
        EastCompiledFn *compiled

    ctypedef struct _EastValuePagedData:
        Beast2Pages *pages
        uint8_t *data
        size_t len
        EastValue *hydrated
        # Ownership of `data` (#658): exactly one of owns_data, owner (a
        # retained value the bytes alias), release (a host callback fired
        # once when the value dies), or none (a borrowed view).
        EastValue *owner
        void (*release)(void *ctx, uint8_t *data, size_t len)
        void *release_ctx
        bint frozen
        bint owns_data

    ctypedef union _EastValueData:
        bint boolean
        int64_t integer
        double float64
        _EastValueStringData string
        int64_t datetime
        _EastValueBlobData blob
        _EastValueArrayData array
        _EastValueSetData set
        _EastValueDictData dict
        _EastValueStructData struct_  "struct_"
        _EastValueVariantData variant
        _EastValueRefData ref
        _EastValueVectorData vector
        _EastValueMatrixData matrix
        _EastValueFunctionData function
        _EastValuePagedData paged

    # The GC header trails `data`, and exists only on the container kinds — a
    # leaf value's slot stops at its union arm, so reading gc_tracked or
    # iter_lock on a scalar is out of bounds. cdef extern binds by name, not
    # offset, so this mirror only has to stay honest, not exhaustive.
    ctypedef struct EastValue:
        EastValueKind kind
        int ref_count
        _EastValueData data
        EastValue *gc_next
        EastValue *gc_prev
        int gc_refs
        bint gc_tracked
        unsigned char gc_gen
        int iter_lock

    # Global null singleton
    EastValue east_null_value

    # Constructors
    EastValue *east_null()
    EastValue *east_boolean(bint val)
    EastValue *east_integer(int64_t val)
    EastValue *east_float(double val)
    EastValue *east_string(const char *s)
    EastValue *east_string_len(const char *s, size_t length)
    EastValue *east_datetime(int64_t millis)
    EastValue *east_blob(const uint8_t *data, size_t length)

    # Collection constructors
    EastValue *east_array_new(EastType *elem_type)
    void east_array_push(EastValue *arr, EastValue *val)
    EastValue *east_array_get(EastValue *arr, size_t index)
    size_t east_array_len(EastValue *arr)

    EastValue *east_set_new(EastType *elem_type)
    void east_set_insert(EastValue *s, EastValue *val)
    bint east_set_has(EastValue *s, EastValue *val)
    bint east_set_delete(EastValue *s, EastValue *val)
    void east_set_clear(EastValue *s)
    size_t east_set_len(EastValue *s)
    # Encapsulated element access — sync the lazy cache, then return the element.
    # Use these instead of indexing data.set.items / data.dict.keys|values, which
    # are a private cache of the underlying B-tree (stale until synced).
    EastValue *east_set_at(EastValue *s, size_t i)

    EastValue *east_dict_new(EastType *key_type, EastType *val_type)
    void east_dict_set(EastValue *d, EastValue *key, EastValue *val)
    EastValue *east_dict_get(EastValue *d, EastValue *key)
    bint east_dict_has(EastValue *d, EastValue *key)
    bint east_dict_delete(EastValue *d, EastValue *key)
    EastValue *east_dict_pop(EastValue *d, EastValue *key)
    void east_dict_clear(EastValue *d)
    size_t east_dict_len(EastValue *d)
    EastValue *east_dict_key_at(EastValue *d, size_t i)
    EastValue *east_dict_val_at(EastValue *d, size_t i)

    EastValue *east_struct_new(const char **names, EastValue **values, size_t count, EastType *type)
    EastValue *east_struct_get_field(EastValue *s, const char *name)
    EastValue *east_struct_get_field_idx(EastValue *s, size_t idx)
    # field_names is NULL whenever the instance's StructType supplies the names
    # (the common case). Always read names through this.
    const char *east_struct_field_name(const EastValue *s, size_t idx)

    EastValue *east_variant_new(const char *case_name, EastValue *value, EastType *type)

    EastValue *east_ref_new(EastValue *value)
    EastValue *east_ref_get(EastValue *ref)
    void east_ref_set(EastValue *ref, EastValue *value)
